syntax = "proto3";

package abao;
option go_package="./abao";

message GetAccountRequest {
  string mnemonic = 1;
  string password = 2;
  int64 index = 3;
  repeated string addressTypes = 4;
}

message GetAccountResponse {
  map<string,Account> accounts = 1;
}

message Account {
  string privateKey = 1;
  string address = 2;
}

message GetBalanceRequest {
  string address = 1;
  string addressType = 2;
  repeated string currencies = 3;
}

message GetBalanceResponse {
  map<string,double> balances = 1;
}

message TransferRequest {
  string addressType = 1;
  string privateKey = 2;
  string to = 4;
  string currency = 5;
  double value = 6;
}

message TransferResponse {
  string TranscationHash = 1;
}

service Abao {
  rpc GetAccount(GetAccountRequest) returns(GetAccountResponse);
  rpc GetBalance(GetBalanceRequest) returns(GetBalanceResponse);
  rpc Transfer(TransferRequest) returns(TransferResponse);
}
